--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h1 {
   line-height: 5.6rem;
 }
 
-.score-container {
+.score-box {
   background-color: #fff;
   display: flex;
   flex-direction: column;
@@ -80,10 +80,11 @@ h1 {
 }
 
 /***********************************/
-/* Game icons */
+/* GAME ICONS */
 /***********************************/
 
-.game-icons_wrapper {
+.game-icons_wrapper,
+.game-icons_wrapper-clicked {
   position: relative;
   max-width: 100rem;
   margin: 0 auto 10rem auto;
@@ -99,14 +100,14 @@ h1 {
   position: absolute;
   width: 100%;
   height: 100%;
-  /* transform: translate(-100%, 50%); */
   top: 0;
   left: 0;
   background: url('images/bg-triangle.svg') no-repeat center;
   z-index: -1;
 }
 
-.game-icon-container {
+.game-icon-box,
+.game-icon-box-picked {
   cursor: pointer;
   background-color: #fff;
   display: flex;
@@ -114,7 +115,7 @@ h1 {
   justify-content: center;
   height: 16rem;
   width: 16rem;
-  box-shadow: inset 0px 17px 0px -9px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0px 20px 0px -9px rgba(0, 0, 0, 0.2);
 }
 
 .game-icon {
@@ -122,8 +123,11 @@ h1 {
 }
 
 .icon-paper,
+.icon-paper-picked,
 .icon-scissors,
-.icon-rock {
+.icon-scissors-picked,
+.icon-rock,
+.icon-rock-picked {
   border-radius: 50%;
   position: relative;
   border: 1px solid transparent;
@@ -134,8 +138,11 @@ h1 {
 }
 
 .icon-paper::after,
+.icon-paper-picked::after,
 .icon-scissors::after,
-.icon-rock::after {
+.icon-scissors-picked::after,
+.icon-rock::after,
+.icon-rock-result::after {
   position: absolute;
   border-radius: 50%;
   top: -2.5rem;
@@ -145,19 +152,23 @@ h1 {
   content: '';
   z-index: -1;
 }
-.icon-paper::after {
+.icon-paper::after,
+.icon-paper-picked::after {
   background: var(--PaperGradient);
   box-shadow: 0px 8px 0px 0px hsl(230, 89%, 60%);
 }
-.icon-scissors::after {
+.icon-scissors::after,
+.icon-scissors-picked::after {
   background: var(--ScissorsGradient);
   box-shadow: 0px 8px 0px 0px hsl(39, 89%, 39%);
 }
-.icon-rock::after {
+.icon-rock::after,
+.icon-rock-picked::after {
   background: var(--RockGradient);
   box-shadow: 0px 8px 0px 0px hsl(349, 71%, 42%);
 }
 
+/* RULES */
 .btn-rules {
   font-family: 'Barlow Semi Condensed', sans-serif;
   font-size: 1.6rem;
@@ -174,7 +185,105 @@ h1 {
   margin: 0 5rem 3rem 0;
 }
 
-/* Footer */
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 998;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.game-rules_wrapper {
+  background-color: #fff;
+  padding: 0 5rem 5rem 5rem;
+  position: absolute;
+  z-index: 999;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.game-rules-title-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 0 4rem 0;
+}
+
+h2 {
+  text-transform: uppercase;
+  font-size: 4rem;
+  color: var(--DarkText);
+}
+
+.icon-close {
+  cursor: pointer;
+}
+
+.icon-close:hover,
+.icon-close:active {
+  opacity: 0.8;
+}
+
+/***********************************/
+/* GAME STATE CHANGE */
+/***********************************/
+
+.game-icons_wrapper-picked {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.placeholder_wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10rem;
+}
+
+.placeholder,
+.game-icon-box-picked {
+  height: 24rem;
+  width: 24rem;
+}
+
+.placeholder {
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  z-index: -2;
+}
+
+.placeholder_wrapper p {
+  color: #fff;
+  font-size: 3rem;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+.game-icon-picked_player {
+  width: 120px;
+}
+
+.icon-paper-picked::after,
+.icon-scissors-picked::after,
+.icon-rock-picked::after {
+  position: absolute;
+  border-radius: 50%;
+  top: -3.8rem;
+  bottom: -3.8rem;
+  left: -3.8rem;
+  right: -3.8rem;
+  content: '';
+  z-index: -1;
+}
+
+/***********************************/
+/* FOOTER */
+/***********************************/
 .attribution_wrapper {
   display: flex;
   flex-direction: column;
@@ -184,7 +293,7 @@ h1 {
   margin-bottom: 5rem;
 }
 
-.attribution-links-container {
+.attribution-links-box {
   display: flex;
   align-self: center;
 }
@@ -192,4 +301,9 @@ h1 {
 .attribution_wrapper a {
   color: hsl(228, 45%, 44%);
   margin-left: 3px;
+}
+
+/*Helper classes*/
+.hidden {
+  display: none;
 }
