--- a/style.css
+++ b/style.css
@@ -264,7 +264,8 @@ h2 {
   letter-spacing: 3px;
 }
 
-.game-icon-picked_player {
+.game-icon-picked_player,
+.game-icon-picked_house {
   width: 120px;
 }
 
